# espert-core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LIBRARIES.md  Makefile  README.md
.github/workflows/: clang-format-check.yml  clang-tidy-check.yml  cmake-multi-platform.yml
cmake/: get-library.cmake  get-vulkan.cmake  install-library.cmake
docs/: CMakeLists.txt  Doxyfile.in  build.dox  libraries.dox  main.dox  systems.dox
libs/imgui/: CMakeLists.txt
libs/spirv-reflect/: CMakeLists.txt  spirv-reflectConfig.cmake.in
libs/stb/: CMakeLists.txt
libs/volk/: CMakeLists.txt  volkConfig.cmake.in
libs/vulkan/: CMakeLists.txt
scripts/: code-format.py  common.py  espert-core.py  install-library.py  libconf.py  post-build.py
src/: Esper.hh  Espert.hh  esppch.cc  esppch.hh
src/Core/: Application.cc  Application.hh  ApplicationContext.cc  ApplicationContext.hh  ClientPoint.hh  Core.hh  EspApplication.cc  EspApplication.hh  EspApplicationContext.cc  EspApplicationContext.hh  EspApplicationParams.hh  EspCamera.cc  EspCamera.hh  EspGui.cc  EspGui.hh  EspRenderer.cc  EspRenderer.hh  EspWindow.cc  EspWindow.hh  Logger.cc  Logger.hh  Timer.cc  Timer.hh  Utils.hh
src/Core/Events/: Event.hh  Events.hh  KeyEvent.hh  MouseEvent.cc  MouseEvent.hh  WindowEvent.hh
src/Core/Input/: EspInput.cc  EspInput.hh  EspKeyCodes.hh  EspMouseButtonCode.hh
src/Core/Layers/: InputLayer.cc  InputLayer.hh  Layer.hh  LayerStack.cc  LayerStack.hh
src/Core/MiniRAPI/: CommandManager.cc  CommandManger.hh  FrameScheduler.cc  FrameScheduler.hh  GraphicPipelineBaker.cc  GraphicPipelineBaker.hh  MiniRContext.cc  MiniRContext.hh  MiniRCore.hh  Readme.md
src/Core/RenderAPI/: EspBuffer.cc  EspBuffer.hh  EspCommandHandler.cc  EspCommandHandler.hh  EspDebugMessenger.cc  EspDebugMessenger.hh  EspFrameManager.cc  EspFrameManager.hh  EspFrameScheduler.cc  EspFrameScheduler.hh  EspPipeline.hh  EspPipelineBuilder.cc  EspPipelineBuilder.hh  EspRenderContext.cc  EspRenderContext.hh  EspUniformMetaData.cc  EspUniformMetaData.hh  README.md  RENDER_API.md
src/Core/RenderAPI/Buffers/: EspBuffer.cc  EspBuffer.hh  EspIndexBuffer.cc  EspIndexBuffer.hh  EspVertexBuffer.cc  EspVertexBuffer.hh  EspVertexBuffers.cc  EspVertexBuffers.hh
src/Core/RenderAPI/Doc/: RenderAPI_v1.md  RenderAPI_v2.md
src/Core/RenderAPI/Pipeline/: EspAttrFormat.hh  EspPipeline.hh  EspPipelineBuilder.cc  EspPipelineBuilder.hh
src/Core/RenderAPI/PipelineOrdering/: EspCommandBuffer.cc  EspCommandBuffer.hh  EspProductPlan.cc  EspProductPlan.hh  EspRenderPlan.cc  EspRenderPlan.hh
src/Core/RenderAPI/RenderPlans/: EspCommandBuffer.cc  EspCommandBuffer.hh  EspGuiRenderPlan.cc  EspGuiRenderPlan.hh  EspRenderPlan.cc  EspRenderPlan.hh
src/Core/RenderAPI/Resources/: EspBuffer.hh  EspCubemap.cc  EspCubemap.hh  EspCubemapFace.hh  EspImageCopy.hh  EspImageSubresourceRange.hh  EspIndexBuffer.cc  EspIndexBuffer.hh  EspShader.cc  EspShader.hh  EspShaderConfig.hh  EspShaderStage.hh  EspSpecializationConstant.hh  EspTexture.cc  EspTexture.hh  EspTextureType.hh  EspVertexBuffer.cc  EspVertexBuffer.hh  EspVertexBuffers.cc  EspVertexBuffers.hh  ShaderProperty.hh  SpirvReflection.cc  SpirvReflection.hh
src/Core/RenderAPI/TEMPORARY/: ExamplePipeline.cc  ExamplePipeline.hh
src/Core/Renderer/: Camera.cc  Camera.hh
src/Core/Resources/: ResourceTypes.hh  ResourceUtils.hh
src/Core/Scene/: Action.cc  Action.hh  Entity.hh  Model.cc  Model.hh  Node.cc  Node.hh  README.md  Scene.cc  Scene.hh  SceneNode.cc  SceneNode.hh
src/Core/Systems/: MaterialSystem.cc  MaterialSystem.hh  README.md  RESOURCE_SYSTEM.md  ResourceSystem.cc  ResourceSystem.hh  ShaderSystem.cc  ShaderSystem.hh  TEXTURE_SYSTEM.md  TextureSystem.cc  TextureSystem.hh
src/Core/Utils/: Logger.cc  Logger.hh  Timer.hh  Utils.hh
src/CoreSystems/: Application.cc  Application.hh  ApplicationContext.cc  ApplicationContext.hh  ClientPoint.hh  ContextApplication.cc  ContextApplication.hh  Core.hh  EspRenderer.hh  EspWindow.cc  EspWindow.hh  EspertWindow.cc  EspertWindow.hh  Logger.cc  Logger.hh  Renderer.cc  Renderer.hh  Utils.hh
src/CoreSystems/Events/: Event.hh  Events.hh  KeyEvent.h  KeyEvent.hh  MouseEvent.h  MouseEvent.hh  WindowEvent.h  WindowEvent.hh
src/CoreSystems/Layers/: Layer.hh  LayerStack.cc  LayerStack.hh
src/CoreSystems/Renderer/: EspWindow.cc  EspWindow.hh  EspertWindow.cc  EspertWindow.hh
src/Platform/Vulkan/: VulkanBuffer.cc  VulkanBuffer.hh  VulkanCommandHandler.cc  VulkanCommandHandler.hh  VulkanContext.cc  VulkanContext.hh  VulkanContextData.hh  VulkanDebugMessenger.cc  VulkanDebugMessenger.hh  VulkanDevice.cc  VulkanDevice.hh  VulkanFrameManager.cc  VulkanFrameManager.hh  VulkanFrameScheduler.cc  VulkanFrameScheduler.hh  VulkanGui.cc  VulkanGui.hh  VulkanPipeline.cc  VulkanPipeline.hh  VulkanPipelineBuilder.cc  VulkanPipelineBuilder.hh  VulkanResourceManager.cc  VulkanResourceManager.hh  VulkanSwapChain.cc  VulkanSwapChain.hh  VulkanUniformManager.cc  VulkanUniformManager.hh  VulkanUniformMetaData.cc  VulkanUniformMetaData.hh
src/RenderAPI/: EspBuffer.cc  EspBuffer.hh  EspDescriptors.cc  EspDescriptors.hh  EspDevice.cc  EspDevice.hh  EspPipeline.cc  EspPipeline.hh  EspRenderContext.h  EspRenderContext.hh  EspRenderScheduler.cc  EspRenderScheduler.hh  EspSwapChain.cc  EspSwapChain.hh  EspWindow.cc  EspWindow.hh
src/Renderer/: Camera.cc  Camera.hh
src/Scene/Components/: ColorComponent.hh  Components.hh  ModelComponent.cc  ModelComponent.hh  TagComponent.hh  TransformComponent.cc  TransformComponent.hh
src/VulkanRenderAPI/: EspBuffer.cc  EspBuffer.hh  EspDescriptors.cc  EspDescriptors.hh  EspDevice.cc  EspDevice.hh  EspFrameScheduler.cc  EspFrameScheduler.hh  EspPipeline.cc  EspPipeline.hh  EspPushConstantData.hh  EspRenderContext.cc  EspRenderContext.hh  EspSwapChain.cc  EspSwapChain.hh
tests/: app.cc  example_test.cc  resource_system.cc  shader_system.cc  test_app.hh  texture_system.cc
tests/assets/: default.frag.spv  default.vert.spv
tests/assets/Shaders/: default.frag.spv  default.vert.spv
tests/assets/shaders/: test.vert.spv
(+212 files in other folders)
